--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "type": "git",
     "url": "https://github.com/lhuet/teleinfo-node.git"
   },
-  "dependencies": {
-    "serialport": "^7.1.4"
-  },
   "author": {
     "name": "Laurent HUET",
     "email": "laurent.huet@gmail.com",
     "url": "http://lhuet.github.io/blog/"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "serialport": "^12.0.0"
+  }
 }
